# TestTaskSGK

./: README.md
TestTaskFirstSGK/: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
TestTaskFirstSGK/cmake/: BuildConfiguration.cmake  PlatformSettings.cmake
TestTaskFirstSGK/docs/: docs.md
TestTaskFirstSGK/include/: direction.hpp  elevator_controller.hpp
TestTaskFirstSGK/src/: CMakeLists.txt  elevator_controller.cpp  main.cpp
TestTaskSecondSGK/: CMakeLists.txt  README.md
TestTaskSecondSGK/cmake/: CompilerSettings.cmake
TestTaskSecondSGK/include/: async_controller.hpp
TestTaskSecondSGK/src/: CMakeLists.txt  async_controller.cpp  main.cpp
